Spacing fix

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,6 +19,7 @@
 @import "bootstrap";
 
 
+html { margin-bottom: 65px }
 
 .white-link {
     color: white!important;
